# hydra_sdk

./: .gitdoc.yaml  .gitignore  .gitmodules  CMakeLists.txt  README.md  botanwasm.sh  build_all_wasm.sh  build_blake3_wasm.sh  build_botan_wasm.sh  build_botan_wasm_from_sources.sh  build_botan_wasm_properly.sh  build_eigen_wasm.sh  build_falcon_wasm.sh  build_gmp_wasm.sh  build_json_wasm.sh  build_openssl_wasm.sh  build_wasm_deps.sh  copy_botan_headers.sh  copy_mpfr_wasm.sh  create_gmp_mock.sh  document_hydra_math_functions.py  fix_botan_headers.sh  fix_botan_wasm_build.sh  fix_gmp_wasm_build.sh  fix_gmp_wasm_build_final.sh  fix_gmp_wasm_build_gmpxx.sh  fix_openssl_wasm_build.sh  fix_openssl_wasm_build_final.sh  fix_wasm_build_complete.sh  generate_docs.sh  integrate_gmp_lmvs.sh  lowercase_cpp_hpp_files.py  mock_lmvs_dependencies.sh  p2p_vfs_cat.sh  package-lock.json  package.json  replace_gmp_mock_with_wasm.sh  test_address  test_address.cpp  update_hydra_math_includes.py  (+3 more)
build_wasm/mock/: CMakeLists.txt
build_wasm/mock/include/: blake3.h  gmp.h  gmp_mock.cpp  gmpxx.h  mpf2mpfr.h  mpfr.h
examples/: CMakeLists.txt  CONTAINER.md  address_generation_example.cpp  container_example.yml  lmvs_bigint_example.cpp  lmvs_example.cpp  p2p_secure_vfs_example.cpp  p2p_vfs_cat_example.cpp  p2p_vfs_example.cpp  qzkp_example.cpp  secure_vector_transport_example.cpp
examples/address_generation_example/: CMakeLists.txt
examples/kernel_example/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  container_config.yml  kernel_example.cpp
examples/lmvs_bigint_example/: CMakeLists.txt  Makefile  cmake_install.cmake
examples/lmvs_example/: CMakeLists.txt  Makefile  cmake_install.cmake
examples/p2p_secure_vfs_example/: CMakeLists.txt  Makefile  cmake_install.cmake
examples/p2p_vfs_cat_example/: CMakeLists.txt
examples/p2p_vfs_example/: CMakeLists.txt  Makefile  cmake_install.cmake
examples/qzkp_example/: CMakeLists.txt  qzkp_example.cpp
examples/secure_vector_transport_example/: CMakeLists.txt  Makefile  cmake_install.cmake
examples/vfs_example/: CMakeLists.txt  README.md  cmake_install.cmake  secure_file_manager  secure_file_manager.cpp  secure_file_manager_updated.cpp  simple_example  simple_example.cpp
examples/vfs_example/persistent_data/: persistent.txt
src/hydra_address/: CMakeLists.txt  README.md  address_generator.cpp  geohash.cpp  layered_matrix.cpp  lmvs_address_generator.cpp  thread_safe_address_generator.cpp  thread_safe_vector_compression.cpp  vector_compression.cpp  wasm_bindings.cpp  wasm_build.cpp
src/hydra_address/examples/: CMakeLists.txt
src/hydra_address/tests/: CMakeLists.txt  test_address_generator.cpp  test_thread_safety.cpp
src/hydra_cli/: CMakeLists.txt  README.md
src/hydra_cli/src/: crypto_commands_address.cpp  crypto_commands_decrypt.cpp  crypto_commands_encrypt.cpp  crypto_commands_keygen.cpp  crypto_commands_keyinfo.cpp  crypto_commands_sign.cpp  crypto_commands_verify.cpp  hydra_cli.cpp  kernel_commands.cpp  kernel_commands_run.cpp  vfs_commands_cat.cpp  vfs_commands_container.cpp  vfs_commands_get.cpp  vfs_commands_list.cpp  vfs_commands_mkdir.cpp  vfs_commands_put.cpp  vfs_commands_remove.cpp  vfs_commands_stats.cpp
src/hydra_common/: CMakeLists.txt
src/hydra_compression/: CMakeLists.txt  README.md
src/hydra_compression/tests/: tvc_test.cpp
src/hydra_crypto/: CMakeLists.txt  README.md  TESTING.md  blake3_hash.cpp  blake3_provider.cpp  dilithium_signature.cpp  falcon_signature.cpp  hashing.cpp  kyber_aes.cpp  kyber_kem.cpp  main.cpp  root_key_manager.cpp  thread_safe_blake3_hash.cpp  wasm_bindings.cpp
src/hydra_crypto/cmake/: FindGMP.cmake  hydra_crypto-config.cmake.in
src/hydra_crypto/docs/: API_DOCUMENTATION.md
src/hydra_crypto/examples/: CMakeLists.txt  dilithium_example.cpp
src/hydra_crypto/scripts/: api_client_example.sh  debug_api.sh  run_integration_tests.sh  simple_test.sh  test_api.sh  test_new_endpoints.sh
src/hydra_crypto/tests/: CMakeLists.txt  test_dilithium_signature.cpp  test_falcon_signature.cpp  test_kyber_kem.cpp
src/hydra_kernel/: CMakeLists.txt  README.md
src/hydra_kernel/src/: ipc.cpp  kernel.cpp  network.cpp  process.cpp
src/hydra_math/: CMakeLists.txt  README.md
src/hydra_math/src/: bigint.cpp  bigint_stub.cpp  bkz.cpp  complexmatrix.cpp  huffman.cpp  latticesolver.cpp  latticeutils.cpp  lll.cpp  matrixutils.cpp  modular.cpp  pedersen.cpp  rational.cpp  shamir.cpp
src/hydra_qtm/: CMakeLists.txt
src/hydra_qtm/src/: classical_register.cpp  noise_model.cpp  qasm_export.cpp  quantum_circuit.cpp  quantum_gate.cpp  quantum_state.cpp  simulator.cpp
src/hydra_qtm/tests/: simulator_test.cpp
src/hydra_qtm_vm/: CMakeLists.txt  README.md  TODO.md
src/hydra_qzkp/: CMakeLists.txt
src/hydra_qzkp/src/: quantum_state_vector.cpp  qzkp.cpp  result_cache.cpp
src/hydra_qzkp/tests/: test_qzkp.cpp
src/hydra_server/: CMakeLists.txt  README.md  api_example.cpp  api_server.cpp
src/hydra_vfs/: CMakeLists.txt  README.md  main.cpp  wasm_bindings.cpp
src/hydra_vfs/docs/: container_vfs_schema.md
src/hydra_vfs/src/: container_file.cpp  container_metadata.cpp  container_path_handler.cpp  container_path_handler.h  container_utils.cpp  container_vfs.cpp  container_vfs_factory.cpp  container_vfs_fixes.cpp  container_vfs_fixes.h  container_vfs_patch.cpp  crypto_utils.h  encrypted_vfs.cpp  macos_security_module.cpp  memory_vfs.cpp  path_utils.cpp  path_utils.h  persistent_vfs.cpp  resource_monitor.cpp  vfs.cpp
src/hydra_vfs/tests/: vfs_test_helper.hpp  vfs_tests.cpp  vfs_tests.cpp.bak  vfs_tests.cpp.new
src/lmvs/: CMakeLists.txt  bigint_vector.cpp  layer_encryption.cpp  layered_bigint_matrix.cpp  layered_bigint_vector.cpp  layered_matrix.cpp  layered_secret_sharing.cpp  layered_vector.cpp  lmvs.cpp  projection_matrix.cpp  secure_consensus_layer.cpp
src/lmvs/cmake/: FindGMP.cmake
src/lmvs/p2p_vfs/: p2p_secure_file.cpp  p2p_vfs.cpp
src/lmvs/security/: secure_vector_transport.cpp  vector_crypto.cpp
src/lmvs_wasm/: CMakeLists.txt  lmvs.cpp  lmvs_bindings.cpp
tests/lmvs_tests/: CMakeLists.txt
(+318 files in other folders)
